Small tweaks to visually improve the code

--- a/src/addresses/view/RootLayout.fxml
+++ b/src/addresses/view/RootLayout.fxml
@@ -6,17 +6,26 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="600.0" stylesheets="@DarkTheme.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="addresses.view.RootLayoutController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" 
+            minWidth="-Infinity" prefHeight="300.0" prefWidth="600.0" 
+            stylesheets="@DarkTheme.css" xmlns="http://javafx.com/javafx/8" 
+            xmlns:fx="http://javafx.com/fxml/1" 
+            fx:controller="addresses.view.RootLayoutController">
   <top>
     <MenuBar BorderPane.alignment="CENTER">
       <menus>
         <Menu mnemonicParsing="false" text="File">
-          <items>
-            <MenuItem mnemonicParsing="false" onAction="#handleNew" text="New" />
-            <MenuItem mnemonicParsing="false" onAction="#handleOpen" text="Open" />
-            <MenuItem mnemonicParsing="false" onAction="#handleSave" text="Save" />
-            <MenuItem mnemonicParsing="false" onAction="#handleSaveAs" text="Save As..." />
-            <MenuItem mnemonicParsing="false" onAction="#handleExit" text="Exit" />
+          <items>            
+            <MenuItem mnemonicParsing="false" onAction="#handleNew" 
+                      text="New" />
+            <MenuItem mnemonicParsing="false" onAction="#handleOpen" 
+                      text="Open" />
+            <MenuItem mnemonicParsing="false" onAction="#handleSave" 
+                      text="Save" />
+            <MenuItem mnemonicParsing="false" onAction="#handleSaveAs" 
+                      text="Save As..." />
+            <MenuItem mnemonicParsing="false" onAction="#handleExit" 
+                      text="Exit" />
           </items>
         </Menu>
         <Menu mnemonicParsing="false" text="Edit">
